@@ -4,7 +4,7 @@ use Test;
 
 use Bailador::Test;
 
-plan 13;
+plan 15;
 
 %*ENV<P6W_CONTAINER> = 'Bailador::Test';
 my $app = EVALFILE "examples/app.pl6";
@@ -120,8 +120,19 @@ subtest {
 #    is %data<err>, '';
 #}, '/template/Camelia';
 
+subtest {
+    plan 2;
+    my %data = run-psgi-request($app, 'HEAD', '/');
+    is-deeply %data<response>, [200, ["Content-Type" => "text/html"], ''], 'route HEAD /';
+    is %data<err>, '';
+}, '/';
 
-
+subtest {
+    plan 2;
+    my %data = run-psgi-request($app, 'HEAD', '/about');
+    is-deeply %data<response>, [200, ["Content-Type" => "text/html"], ''], 'route HEAD /about';
+    is %data<err>, '';
+}, '/';
 
 # vim: expandtab
 # vim: tabstop=4
